// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group Item component renders correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="group_item.container"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
    testID="group_item.test"
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "flexDirection": "row",
          "height": "100%",
          "marginHorizontal": 12,
          "opacity": 1,
          "width": 1,
        }
      }
      testID="group_item.button_wrapper"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="button_wrapper.content"
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#FFFFFF",
              "marginLeft": -7,
              "paddingVertical": 4,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="group_item.button_wrapper.icon"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "borderRadius": 4,
              "height": 40,
              "width": 40,
            }
          }
          testID="avatar"
        >
          <View
            style={
              Object {
                "backgroundColor": "#A4A9B7",
                "borderRadius": 4,
                "height": 40,
                "width": 40,
              }
            }
            testID="avatar_container"
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "position": "relative",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#f9f9f9",
                      "borderRadius": 4,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                  testID="Image__placeholder"
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <FastImageView
                  onFastImageError={[Function]}
                  onFastImageLoadEnd={[Function]}
                  resizeMode="cover"
                  source={null}
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                  testID="avatar.image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#181C32",
                "fontFamily": "BeVietnamPro-SemiBold",
                "fontSize": 13,
              },
              Object {},
              Object {
                "maxWidth": 200,
                "paddingTop": 2,
              },
            ]
          }
        >
          EVOL Community
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 13,
                },
                Object {
                  "color": "#767D93",
                },
                Object {
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            24
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Group Item component should render UI Level when uiLevel > 0 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="group_item.container"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
    testID="group_item.test"
  >
    <View
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "height": "100%",
          "marginHorizontal": 12,
          "width": 1,
        }
      }
      testID="group_item.ui_level"
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "flexDirection": "row",
          "height": "100%",
          "marginHorizontal": 12,
          "opacity": 1,
          "width": 1,
        }
      }
      testID="group_item.button_wrapper"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="button_wrapper.content"
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#FFFFFF",
              "marginLeft": -7,
              "paddingVertical": 4,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="group_item.button_wrapper.icon"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "borderRadius": 4,
              "height": 40,
              "width": 40,
            }
          }
          testID="avatar"
        >
          <View
            style={
              Object {
                "backgroundColor": "#A4A9B7",
                "borderRadius": 4,
                "height": 40,
                "width": 40,
              }
            }
            testID="avatar_container"
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "position": "relative",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#f9f9f9",
                      "borderRadius": 4,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                  testID="Image__placeholder"
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <FastImageView
                  onFastImageError={[Function]}
                  onFastImageLoadEnd={[Function]}
                  resizeMode="cover"
                  source={null}
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                  testID="avatar.image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#181C32",
                "fontFamily": "BeVietnamPro-SemiBold",
                "fontSize": 13,
              },
              Object {},
              Object {
                "maxWidth": 200,
                "paddingTop": 2,
              },
            ]
          }
        >
          EVOL Community
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 13,
                },
                Object {
                  "color": "#767D93",
                },
                Object {
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            24
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Group Item component should render default prop 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="group_item.container"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
    testID="group_item"
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "borderRadius": 4,
              "height": 40,
              "width": 40,
            }
          }
          testID="avatar"
        >
          <View
            style={
              Object {
                "backgroundColor": "#A4A9B7",
                "borderRadius": 4,
                "height": 40,
                "width": 40,
              }
            }
            testID="avatar_container"
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "position": "relative",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#f9f9f9",
                      "borderRadius": 4,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                  testID="Image__placeholder"
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <FastImageView
                  onFastImageError={[Function]}
                  onFastImageLoadEnd={[Function]}
                  resizeMode="cover"
                  source={null}
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                  testID="avatar.image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#181C32",
                "fontFamily": "BeVietnamPro-SemiBold",
                "fontSize": 13,
              },
              Object {},
              Object {
                "maxWidth": 200,
                "paddingTop": 2,
              },
            ]
          }
        >
          EVOL Community
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 13,
                },
                Object {
                  "color": "#767D93",
                },
                Object {
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            24
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Group Item component should render toggle button when childrenUiIds.length > 0 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="group_item.container"
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
    testID="group_item.test"
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#E3E6F2",
          "flexDirection": "row",
          "height": "100%",
          "marginHorizontal": 12,
          "opacity": 1,
          "width": 1,
        }
      }
      testID="group_item.button_wrapper"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="button_wrapper.content"
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#FFFFFF",
              "marginLeft": -7,
              "paddingVertical": 4,
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View
                  testID="group_item.button_wrapper.icon"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingVertical": 4,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "borderRadius": 4,
              "height": 40,
              "width": 40,
            }
          }
          testID="avatar"
        >
          <View
            style={
              Object {
                "backgroundColor": "#A4A9B7",
                "borderRadius": 4,
                "height": 40,
                "width": 40,
              }
            }
            testID="avatar_container"
          >
            <View
              onLayout={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "position": "relative",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#f9f9f9",
                      "borderRadius": 4,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    }
                  }
                  testID="Image__placeholder"
                />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 4,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <FastImageView
                  onFastImageError={[Function]}
                  onFastImageLoadEnd={[Function]}
                  resizeMode="cover"
                  source={null}
                  style={
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    }
                  }
                  testID="avatar.image"
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "paddingHorizontal": 12,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#181C32",
                "fontFamily": "BeVietnamPro-SemiBold",
                "fontSize": 13,
              },
              Object {},
              Object {
                "maxWidth": 200,
                "paddingTop": 2,
              },
            ]
          }
        >
          EVOL Community
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-Light",
                  "fontSize": 13,
                },
                Object {
                  "color": "#767D93",
                },
                Object {
                  "marginHorizontal": 4,
                },
              ]
            }
          >
            24
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
